Bug 1774683, use ValidateFilenameForSaving to validate dropped links on Windows, r=mhowell a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D149746